# ID-PERS-SEMSP25-Tony-Genev

./: README.md
com/2_can/CAN Bus Device A/src/: BlinkControl.cpp  BlinkControl.h  CAN Bus - two ecu.code-workspace  CANHandler.cpp  CANHandler.h  UART.cpp  main.cpp
com/2_can/CAN Bus Device B/src/: BeamControl.cpp  BeamControl.h  CANHandler.cpp  CANHandler.h  UART.h  main.cpp
com/2_can/CAN Bus joystick/: platformio.ini
com/2_can/CAN Bus joystick/src/: CANSender.cpp  CANSender.h  DirectionLogic.cpp  DirectionLogic.h  JoystickInput.cpp  JoystickInput.h  UART.cpp  UART.h  main.cpp
es/Project(Watering System)/HAL_Project/src/: main.cpp  main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.c
es/Workshops-challenges/GPIO_NUCLEO_F303RE_HAL/: platformio.ini
ps/: README.md
ps/pirate_ship_game/: CMakeLists.txt  Game.hpp  main.cpp
ps/pirate_ship_game/engine/: BoardMap.cpp  BoardMap.hpp  GameConstants.hpp  GameEngine.cpp  GameEngine.hpp  ObstacleManager.cpp  ObstacleManager.hpp  ScoreManager.cpp  ScoreManager.hpp  ShipManager.cpp  ShipManager.hpp  TreasureManager.cpp  TreasureManager.hpp
ps/pirate_ship_game/entities/: Obstacle.cpp  Obstacle.hpp  Ship.cpp  Ship.hpp  Treasure.cpp  Treasure.hpp
ps/pirate_ship_game/input/: FTXUIInputAdapter.hpp  JoystickInputHandler.hpp  KeyboardInputHandler.hpp
ps/pirate_ship_game/interfaces/: IInputHandler.hpp
ps/pirate_ship_game/tests/: GameEngineTests.cpp  ObstacleManagerTests.cpp  ScoreManagerTests.cpp  ShipManagerTests.cpp
ps/pirate_ship_game/ui/: GameApplication.cpp  GameApplication.hpp
rtos/: README.md
rtos/Challenges/RTOS - Refractored/: UARTHandler.cpp  main.cpp  scenes.cpp  scenes.h  sprinkler.cpp  sprinkler.h
sd/: README.md
sd/Workshops/measurement-series/: .gitignore  Makefile
(+81 files in other folders)
